gitops/manifests/external-services/pve1/service-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve1-external
  namespace: external-services
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve1-external
  namespace: external-services
subsets:
  - addresses:
      - ip: 10.0.10.11
    ports:
      - name: https
        port: 8006
