gitops/manifests/external-services/pve1/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve1
  namespace: external-services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pve1.pearsalls.fr`)
      kind: Rule
      middlewares:
        - name: pve1-admin-only
      services:
        - name: pve1-external
          port: 8006
          serversTransport: pve1-insecure-transport

  tls:
    certResolver: cloudflare
